style: fix colors, sizing and spacing
- fix text color on home page
- fixed badge spacing and size in leetcode page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,9 +100,7 @@ const links = [
 				/>
 			</span>
 
-			<figcaption
-				class="bg-background text-center font-semibold text-foreground ~p-2/4"
-			>
+			<figcaption class="text-center font-semibold ~p-2/4">
 				<span class="italic">This image comes from my</span>
 				<A href="https://github.com/DrInfinite" target="_blank">
 					GitHub Profile
