fix: added coming soon content to designs, projects and tools

--- a/src/pages/design/index.astro
+++ b/src/pages/design/index.astro
@@ -26,5 +26,6 @@ import Layout from "@/layouts/Layout.astro";
 <Layout
 	title="Designs"
 	description="A curated list of digital designs that I have created"
-	>Hello world</Layout
 >
+	Coming Soon...
+</Layout>
