--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -26,5 +26,6 @@ import Layout from "@/layouts/Layout.astro";
 <Layout
 	title="Projects"
 	description="A curated list of technical projects that I have worked on"
-	>Hello World</Layout
 >
+	Coming Soon...
+</Layout>
