--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -26,5 +26,6 @@ import Layout from "@/layouts/Layout.astro";
 <Layout
 	title="Tools"
 	description="A collection of simple tools that make your life easier"
-	>Hello World</Layout
 >
+	Coming Soon...
+</Layout>
