feat: verification for mastodon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,5 +41,8 @@ const year = new Date().getFullYear();
 		<A href={"/policy"} title={"Site Policies"}>Site Policies</A>
 		<A href={"/license"} title={"License"}>License</A>
 		<A href={"/contact"} title={"contact"}>Contact</A>
+		<A rel="me" css="hidden" href="https://mastodon.social/@naparajith">
+			Mastodon
+		</A>
 	</p>
 </footer>
