feat: add mastodon links

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -46,6 +46,12 @@ const links = [
 		innerHTML: "BlueSky",
 		target: "_blank",
 	},
+	{
+		href: "https://mastodon.social/@naparajith",
+		title: "Naparajith | DrInfinite (@naparajjith.mastodon.social)",
+		innerHTML: "Mastodon",
+		target: "_blank",
+	},
 ];
 ---
 
