--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -39,6 +39,11 @@ const translations = [
 
 const links = [
 	{
+		href: "/contact",
+		title: "Contact",
+		innerHTML: "Contact",
+	},
+	{
 		href: "https://www.linkedin.com/in/naparajith/",
 		title: "LinkedIn - Naparajith T L",
 		innerHTML: "LinkedIn",
@@ -61,19 +66,15 @@ const links = [
 		target: "_blank",
 	},
 	{
-		href: "/contact",
-		title: "Contact",
-		innerHTML: "Contact",
+		href: "https://mastodon.social/@naparajith",
+		title: "Naparajith | DrInfinite (@naparajjith.mastodon.social)",
+		innerHTML: "Mastodon",
+		target: "_blank",
 	},
 	{
 		href: "/blog",
 		title: "Blog",
 		innerHTML: "Blog",
-	},
-	{
-		href: "/quotes",
-		title: "Portfolio - Quotes",
-		innerHTML: "Quotes",
 	},
 ];
 ---
