--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,8 +41,8 @@ const year = new Date().getFullYear();
 		<A href={"/policy"} title={"Site Policies"}>Site Policies</A>
 		<A href={"/license"} title={"License"}>License</A>
 		<A href={"/contact"} title={"contact"}>Contact</A>
-		<A rel="me" css="hidden" href="https://mastodon.social/@naparajith">
+		<a rel="me" class="hidden" href="https://mastodon.social/@naparajith">
 			Mastodon
-		</A>
+		</a>
 	</p>
 </footer>
