fix: mastodon link in headers

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,6 +65,7 @@ const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link href="https://mastodon.social/@naparajith" rel="me" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} | Naparajith</title>
 		<meta name="description" content={description} />
