--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,8 +116,8 @@ const socials = [
 		</figure>
 		<p>
 			<strong>
-				A SDET committed to solving problems, I am dedicated to deepening my
-				expertise in every technology that drives software excellence.
+				An engineer committed to solving problems, I am dedicated to deepening
+				my expertise in every technology that drives software excellence.
 			</strong>
 		</p>
 	</article>
