refactor: quick view links

--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -33,20 +33,19 @@ const blog = await getCollection("blog");
 
 const cards = [
 	{
-		href: "https://www.linkedin.com/in/naparajith/",
-		title: "LinkedIn - Naparajith T L",
-		innerHTML: "LinkedIn",
-		target: "_blank",
-	},
-	{
 		href: "/",
 		title: "Portfolio",
 		innerHTML: "Portfolio",
 	},
 	{
-		href: "https://bsky.app/profile/naparajith.in",
-		title: "Naparajith | DrInfinite (@naparajith.in)",
-		innerHTML: "BlueSky",
+		href: "/profile",
+		title: "Profile",
+		innerHTML: "Profile",
+	},
+	{
+		href: "https://www.linkedin.com/in/naparajith/",
+		title: "LinkedIn - Naparajith T L",
+		innerHTML: "LinkedIn",
 		target: "_blank",
 	},
 	{
@@ -68,6 +67,12 @@ const cards = [
 		href: "/quotes",
 		title: "Quotes",
 		innerHTML: "Quotes",
+	},
+	{
+		href: "https://bsky.app/profile/naparajith.in",
+		title: "Naparajith | DrInfinite (@naparajith.in)",
+		innerHTML: "BlueSky",
+		target: "_blank",
 	},
 	{
 		href: "https://mastodon.social/@naparajith",
