refactor: profile page links

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -51,8 +51,8 @@ const links = [
 	},
 	{
 		href: "/quick-view/leetcode",
-		title: "LeetCode",
-		innerHTML: "LeetCode",
+		title: "Leetcode",
+		innerHTML: "Leetcode",
 	},
 	{
 		href: "https://bsky.app/profile/naparajith.in",
