--- a/src/components/quick-view/LeetcodeCard.astro
+++ b/src/components/quick-view/LeetcodeCard.astro
@@ -7,7 +7,7 @@ const leetcode = await LeetcodeProfile();
 
 <ACard href="/quick-view/leetcode" title="LeetCode">
 	<span class="flex flex-col">
-		LeetCode
+		Leetcode
 		<div
 			class="h-[2px] bg-gradient-to-r from-[#1e57b7] to-[#4762f4] transition-all duration-300 ~my-0/2"
 		>
