--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,7 +78,7 @@
 	}
 
 	body {
-		@apply prose prose-sm mx-auto scroll-smooth bg-background text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold prose-blockquote:~text-base/3xl;
+		@apply prose prose-sm mx-auto scroll-smooth bg-background px-4 text-foreground antialiased md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold prose-blockquote:~text-base/3xl md:px-0;
 	}
 
 	button {
@@ -113,7 +113,7 @@
 	}
 
 	details {
-		@apply border border-border ~p-4/8;
+		@apply border border-border p-2 sm:p-4 lg:p-6 2xl:p-8;
 	}
 
 	summary {
