fix: modified coming soon page content

--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -27,5 +27,10 @@ import Layout from "@/layouts/Layout.astro";
 	title="Tools"
 	description="A collection of simple tools that make your life easier"
 >
-	Coming Soon...
+	<h1>Coming Soon...</h1>
+	<p>
+		I am currently working on fleshing this page with simple tools that someone
+		might actually use occationally. Check back in some time to see a curated
+		list of useful tools.
+	</p>
 </Layout>
