--- a/src/pages/design/index.astro
+++ b/src/pages/design/index.astro
@@ -27,5 +27,10 @@ import Layout from "@/layouts/Layout.astro";
 	title="Designs"
 	description="A curated list of digital designs that I have created"
 >
-	Coming Soon...
+	<h1>Coming Soon...</h1>
+	<p>
+		I am currently working on fleshing this page with selected works of design
+		that I have made over the years. Check back in some time to see a curated
+		list of beautiful designs.
+	</p>
 </Layout>
