--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -27,5 +27,10 @@ import Layout from "@/layouts/Layout.astro";
 	title="Projects"
 	description="A curated list of technical projects that I have worked on"
 >
-	Coming Soon...
+	<h1>Coming Soon...</h1>
+	<p>
+		I am currently working on fleshing this page with selected projects that I
+		have made over the years. Check back in some time to see a curated list of
+		interesting projects.
+	</p>
 </Layout>
