refactor: header style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,63 +24,44 @@ import A from "@/components/A.astro";
 import Button from "@/components/Button.astro";
 ---
 
-<header
-	class="my-10 flex flex-row items-center justify-between border-b border-border pb-4"
-	transition:persist
->
-	{
-		Astro.url.pathname === "/" ? (
-			<strong class="font-semibold">Naparajith (Naps) T L</strong>
-		) : (
-			<span class="font-semibold">
-				{Astro.url.pathname.startsWith("/blog") ||
-				Astro.url.pathname.startsWith("/quotes")
-					? Astro.url.pathname
-							.toString()
-							.replace("/", "")
-							.replace(/\/.*/, "")
-							.replace("/", "")
-					: Astro.url.pathname.startsWith("/profile")
+<header class="my-10" transition:persist>
+	<div class="mb-2 flex items-center justify-between ~gap-2/4">
+		<strong>
+			~/{
+				Astro.url.pathname === "/"
+					? ""
+					: Astro.url.pathname.startsWith("/blog") ||
+						  Astro.url.pathname.startsWith("/quotes")
 						? Astro.url.pathname
 								.toString()
 								.replace("/", "")
-								.replace(/\/\d+-/, "/")
-						: Astro.url.pathname.toString().replace("/", "")}
-			</span>
-		)
-	}
+								.replace(/\/.*/, "")
+								.replace("/", "")
+						: Astro.url.pathname.startsWith("/profile")
+							? Astro.url.pathname
+									.toString()
+									.replace("/", "")
+									.replace(/\/\d+-/, "/")
+							: Astro.url.pathname.toString().replace("/", "")
+			}
+		</strong>
+		<strong>naparajith | sdet 2</strong>
+	</div>
 
-	{
-		Astro.url.pathname === "/" ? (
-			<strong>SDET II | Open-Source Contributor</strong>
-		) : Astro.url.pathname === "/quick-view" ? (
-			<Button
-				title="Resume"
-				target="_blank"
-				href="https://flowcv.com/resume/mdrssqq018"
-			>
-				Resume
-			</Button>
-		) : (
-			<span class="flex flex-wrap items-center justify-evenly ~gap-2/4">
-				<A href="/" title="Home">
-					Home
-				</A>
-				<A href="/profile" title="Profile">
-					Profile
-				</A>
-				<A href="/quick-view" title="Quick View">
-					Quick View
-				</A>
-				<A
-					title="Resume"
-					target="_blank"
-					href="https://flowcv.com/resume/mdrssqq018"
-				>
-					Resume
-				</A>
-			</span>
-		)
-	}
-	<!-- </div> -->
+	<span
+		class="flex flex-wrap items-center justify-evenly border-b border-t border-border py-4 ~gap-2/4"
+	>
+		<A href="/" title="Home"> Home </A>
+		<A href="/profile" title="Profile"> Profile </A>
+		<A href="/quick-view" title="Quick View"> Quick View </A>
+		<A href="/projects" title="Projects"> Projects </A>
+		<!-- <A href="/design" title="Design"> Designs </A> -->
+		<Button
+			title="Resume"
+			target="_blank"
+			href="https://flowcv.com/resume/mdrssqq018"
+		>
+			Resume
+		</Button>
+	</span>
 </header>
