feat: initial implementation of a random number generator

--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -29,6 +29,12 @@ const tools = [
 		description:
 			"Convert between binary, decimal, hexadecimal and octal number systems.",
 	},
+	{
+		url: "random-number",
+		name: "Random Number Generator",
+		description:
+			"Generate a random number based on generation rules that you set.",
+	},
 ];
 ---
 
