style: add new monospace font

--- a/src/layouts/ToolsLayout.astro
+++ b/src/layouts/ToolsLayout.astro
@@ -90,6 +90,7 @@ const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
         <Font cssVariable="--font-sans" preload />
         <Font cssVariable="--font-serif" preload />
         <Font cssVariable="--font-quote" preload />
+        <Font cssVariable="--font-mono" preload />
     </head>
     <body>
         <Header />
