--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,10 +22,18 @@
 
 import A from "@/components/A.astro";
 import Button from "@/components/Button.astro";
+
+const links = [
+    { href: "/", title: "Home" },
+    { href: "/profile", title: "Profile" },
+    { href: "/quick-view", title: "Quick View" },
+    { href: "/blog", title: "Blog" },
+    { href: "/projects", title: "Projects" },
+];
 ---
 
 <header class="my-10" transition:persist>
-    <div class="mb-2 flex items-center justify-between ~gap-2/4">
+    <div class="mb-2 flex items-center justify-between font-serif ~gap-2/4">
         <strong>
             ~/{
                 Astro.url.pathname === "/"
@@ -51,11 +59,13 @@ import Button from "@/components/Button.astro";
     <span
         class="flex flex-wrap items-center justify-evenly border-b border-t border-border py-4 ~gap-2/4"
     >
-        <A href="/" title="Home"> Home </A>
-        <A href="/profile" title="Profile"> Profile </A>
-        <A href="/quick-view" title="Quick View"> Quick View </A>
-        <A href="/projects" title="Projects"> Projects </A>
-        <!-- <A href="/design" title="Design"> Designs </A> -->
+        {
+            links.map((link) => (
+                <A href={link.href} title={link.title}>
+                    {link.title}
+                </A>
+            ))
+        }
         <Button
             title="Resume"
             target="_blank"
