fix(quotes/[slug].astro): updated individual quote page

--- a/src/pages/quotes/[slug].astro
+++ b/src/pages/quotes/[slug].astro
@@ -43,8 +43,8 @@ export const getStaticPaths = async () => {
 >
     <main class="min-h-[60vh]">
         <p>
-            A collection of quotes by {author} that I resonate with and wish to share
-            with a wider audience.
+            A collection of quotes attributed to {author} that I resonate with and
+            wish to share with a wider audience.
         </p>
 
         {
