style(Header.astro): arch icon

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,6 +52,7 @@ const links = [
                               .replace(/\/\d+-/, "/")
                         : Astro.url.pathname.toString().replace("/", "")
             }
+            <span> 󰣇 </span>
         </strong>
         <strong>naparajith | sdet 2</strong>
     </div>
