fix: random number generator instructions

--- a/src/pages/tools/random-number/index.astro
+++ b/src/pages/tools/random-number/index.astro
@@ -3,11 +3,11 @@ import ToolsLayout from "@/layouts/ToolsLayout.astro";
 import RandomNumber from "@/tools/random-number";
 
 const instructions = [
-    "Select the initial numerical system from the dropdown",
-    "Select the target numerical system from the dropdown",
-    "Enter a number in that numerical system",
+    "Set the Lower Limit and Upper Limit for number generation",
+    "Click the Generate Button",
     "See the numbers get converted in real time.",
     "Copy the converted values if needed",
+    "Click the Reset Button to set the Lower and Upper Limits to the Min and Max safe values",
     "Repeat for any other conversions",
 ];
 ---
