--- a/src/layouts/ToolsLayout.astro
+++ b/src/layouts/ToolsLayout.astro
@@ -101,5 +101,17 @@ const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
         <HowToUse instructions={instructions} />
         <FAQs faqs={faqs} />
         <Footer />
+
+        <script>
+            const originalTitle = document.title;
+
+            document.addEventListener("visibilitychange", () => {
+                if (document.hidden) {
+                    document.title = "👋 Come back!";
+                } else {
+                    document.title = originalTitle;
+                }
+            });
+        </script>
     </body>
 </html>
