refactor(random-number/index.astro): make component client:load instead of client only

--- a/src/pages/tools/random-number/index.astro
+++ b/src/pages/tools/random-number/index.astro
@@ -17,5 +17,5 @@ const instructions = [
     description="Generate a random number based on generation rules that you set."
     instructions={instructions}
 >
-    <RandomNumber client:only />
+    <RandomNumber client:load />
 </ToolsLayout>
