refactor(ToolsLayout.astro): cut down on bloat and removing repetitive lines

--- a/src/layouts/ToolsLayout.astro
+++ b/src/layouts/ToolsLayout.astro
@@ -22,9 +22,7 @@
 
 import "@/styles/globals.css";
 
-import Footer from "@/components/Footer.astro";
-import Header from "@/components/Header.astro";
-import { Font } from "astro:assets";
+import Layout from "@/layouts/Layout.astro";
 import FAQs, { type FAQ } from "@/tools/FAQ.astro";
 import HowToUse from "@/tools/HowToUse.astro";
 
@@ -37,81 +35,13 @@ interface Props {
 }
 
 const { title, description, instructions, faqs, ogImage } = Astro.props;
-const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
 ---
 
-<script is:inline>
-    const getThemePreference = () => {
-        if (
-            typeof localStorage !== "undefined" &&
-            localStorage.getItem("theme")
-        ) {
-            return localStorage.getItem("theme");
-        }
-        return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-    };
-    const isDark = getThemePreference() === "dark";
-    document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+<Layout title={title} description={description} ogImage={ogImage}>
+    <h1>{title}</h1>
+    <p>{description}</p>
+    <slot />
 
-    if (typeof localStorage !== "undefined") {
-        const observer = new MutationObserver(() => {
-            const isDark = document.documentElement.classList.contains("dark");
-            localStorage.setItem("theme", isDark ? "dark" : "light");
-        });
-        observer.observe(document.documentElement, {
-            attributes: true,
-            attributeFilter: ["class"],
-        });
-    }
-</script>
-
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <link href="https://mastodon.social/@naparajith" rel="me" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{title} | Naparajith</title>
-        <meta name="description" content={description} />
-
-        <meta property="og:description" content={description} />
-        <meta property="og:locale" content="en_IN" />
-        <meta property="og:site_name" content="Naparajith" />
-        <meta property="og:title" content=`${title} | Naparajith` />
-        <meta property="og:url" content={Astro.url} />
-        <meta property="og:image" content={ogImage || defaultOgImage} />
-
-        <meta property="twitter:title" content=`${title} | Naparajith` />
-        <meta property="twitter:description" content={description} />
-
-        <Font cssVariable="--font-sans" preload />
-        <Font cssVariable="--font-serif" preload />
-        <Font cssVariable="--font-quote" preload />
-        <Font cssVariable="--font-mono" preload />
-    </head>
-    <body>
-        <Header />
-        <h1>{title}</h1>
-        <p>{description}</p>
-        <slot />
-
-        <HowToUse instructions={instructions} />
-        <FAQs faqs={faqs} />
-        <Footer />
-
-        <script>
-            const originalTitle = document.title;
-
-            document.addEventListener("visibilitychange", () => {
-                if (document.hidden) {
-                    document.title = "👋 Come back!";
-                } else {
-                    document.title = originalTitle;
-                }
-            });
-        </script>
-    </body>
-</html>
+    <HowToUse instructions={instructions} />
+    <FAQs faqs={faqs} />
+</Layout>
