fix: typos and content structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,9 +116,8 @@ const socials = [
         </figure>
         <p>
             <strong>
-                An engineer committed to solving problems, I am dedicated to
-                deepening my expertise in every technology that drives software
-                excellence.
+                I'm a software engineer focused on solving meaningful problems
+                and continually deepening my expertise across the stack.
             </strong>
         </p>
     </article>
@@ -154,12 +153,12 @@ const socials = [
                 title="Resume"
                 target="_blank"
             >
-                Resume: Download latest version
+                Download my latest Resume
             </A>
         </p>
         <div class="~space-y-4/8">
             <hr class="my-4 border-t-2 border-t-border" />
-            <h2>A random quote that I like</h2>
+            <h2>Featured Quote</h2>
             <figure
                 class="place-content-center rounded-none border border-border p-4 ~gap-2/4"
             >
@@ -227,23 +226,22 @@ const socials = [
                 </figcaption>
             </figure>
             <p>
-                I intened to make learning my long-term commitment, and that
-                takes a lot of support, effort and cooperation. Here are a few
-                things I'm interested in getting help on (not an exhaustive
-                list):
+                I intend to make learning a long-term commitment. Here are a few
+                areas I'm actively exploring:
             </p>
             <ul>
                 {learning.map((concept) => <li>{concept}</li>)}
             </ul>
             <p>
-                If you would like to help me out in learning any of these
-                concepts or would like to provide any feedback, please write to <A
+                If you’d like to collaborate or share feedback on any of these
+                topics, please write to
+                <A
                     href="mailto:naparajith@duck.com"
                     title="E-Mail Address"
                     target="_blank"
                 >
-                    naparajith@duck.com.
-                </A> I really appreciate any support provided.
+                    naparajith@duck.com
+                </A>.
             </p>
         </div>
     </main>
