refactor(src/pages/index.astro): new list of learning objectives

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,13 +27,12 @@ import Layout from "../layouts/Layout.astro";
 import { getCollection } from "astro:content";
 
 const learning = [
-    "How to read large codebases without getting lost?",
-    "How do memory-corruption vulnerabilities work?",
+    "Reading large codebases in a sequential way without getting lost",
+    "The intricacies of memory-corruption vulnerabilities",
     "Ethical exploitation of web applications",
-    "Building a programming language from scratch using LLVM",
-    "An in-depth explanation of how a Syscall works",
-    "An in-depth explanation of how to build Firefox extensions.",
-    "Reading a codebase without getting lost or stuck.",
+    "Building a programming language from scratch",
+    "Implementing large, dynamic websites without a significant amount of JavaScript",
+    "Building a Web Browser from Scratch",
 ];
 
 const quotes = await getCollection("quotes");
